fixes cropper modal

--- a/resources/sass/_bs/_modal.scss
+++ b/resources/sass/_bs/_modal.scss
@@ -33,4 +33,8 @@
             }
         }
     }
+
+    .full-height {
+        height: 100%;
+    }
 }
